[package]
name = "nse_socket"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.1", features = ["full"] }
tokio-tungstenite = "0.23.1"
futures = "0.3.30"
env_logger = "0.11.3"
log = "0.4.22"
rand = "0.8.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }